--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,14 @@
                         <div class="logo-icon">🤖</div>
                         <h1>WIndexAI</h1>
                     </div>
+                    <div class="auth-header-actions">
+                        <button id="auth-theme-toggle" class="theme-toggle" title="Переключить тему">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <circle cx="12" cy="12" r="5"></circle>
+                                <path d="M12 1v2M12 21v2M4.22 4.22l1.42 1.42M18.36 18.36l1.42 1.42M1 12h2M21 12h2M4.22 19.78l1.42-1.42M18.36 5.64l1.42-1.42"></path>
+                            </svg>
+                        </button>
+                    </div>
                     <p>Добро пожаловать в WIndexAI</p>
                 </div>
                 
