--- a/static/editor.html
+++ b/static/editor.html
@@ -341,6 +341,121 @@
                 padding: 1rem;
             }
         }
+
+        /* Modal styles */
+        .modal {
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .modal-content {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            width: 90%;
+            max-width: 500px;
+            max-height: 90vh;
+            overflow-y: auto;
+        }
+
+        .modal-header {
+            padding: 1.5rem;
+            border-bottom: 1px solid rgba(34, 197, 94, 0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .modal-header h3 {
+            margin: 0;
+            color: #16a34a;
+            font-size: 1.25rem;
+        }
+
+        .close {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #6b7280;
+            cursor: pointer;
+            line-height: 1;
+        }
+
+        .close:hover {
+            color: #374151;
+        }
+
+        .modal-body {
+            padding: 1.5rem;
+        }
+
+        .modal-footer {
+            padding: 1.5rem;
+            border-top: 1px solid rgba(34, 197, 94, 0.1);
+            display: flex;
+            gap: 1rem;
+            justify-content: flex-end;
+        }
+
+        .form-group {
+            margin-bottom: 1rem;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-weight: 500;
+            color: #374151;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid #d1d5db;
+            border-radius: 8px;
+            font-size: 0.875rem;
+            transition: border-color 0.2s;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: #22c55e;
+            box-shadow: 0 0 0 3px rgba(34, 197, 94, 0.1);
+        }
+
+        .deploy-status {
+            margin-top: 1rem;
+            padding: 1rem;
+            border-radius: 8px;
+            text-align: center;
+        }
+
+        .deploy-status.success {
+            background-color: #f0fdf4;
+            border: 1px solid #bbf7d0;
+            color: #166534;
+        }
+
+        .deploy-status.error {
+            background-color: #fef2f2;
+            border: 1px solid #fecaca;
+            color: #dc2626;
+        }
+
+        .deploy-status.loading {
+            background-color: #f0f9ff;
+            border: 1px solid #bae6fd;
+            color: #0369a1;
+        }
     </style>
 </head>
 <body>
@@ -429,6 +544,9 @@
                             <button id="download-html-btn" class="btn btn-outline btn-sm" title="Скачать HTML">
                                 💾 Скачать
                             </button>
+                            <button id="deploy-btn" class="btn btn-primary btn-sm" title="Деплой сайта">
+                                🚀 Деплой
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -449,7 +567,34 @@
         </main>
   </div>
 
-  <script src="/static/editor.js"></script>
+    <!-- Modal для деплоя -->
+    <div id="deploy-modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>🚀 Деплой сайта</h3>
+                <span class="close">&times;</span>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="deploy-title">Название сайта:</label>
+                    <input type="text" id="deploy-title" placeholder="Введите название вашего сайта" required>
+                </div>
+                <div class="form-group">
+                    <label for="deploy-description">Описание (необязательно):</label>
+                    <textarea id="deploy-description" placeholder="Краткое описание вашего сайта" rows="3"></textarea>
+                </div>
+                <div class="deploy-status" id="deploy-status" style="display: none;">
+                    <div class="status-message"></div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="cancel-deploy" class="btn btn-outline">Отмена</button>
+                <button id="confirm-deploy" class="btn btn-primary">Деплой</button>
+            </div>
+        </div>
+    </div>
+
+    <script src="/static/editor.js"></script>
 </body>
 </html>
 </html>
