--- a/static/index.html
+++ b/static/index.html
@@ -178,6 +178,26 @@
                             <div class="typing-dot"></div>
                         </div>
                     </div>
+
+                    <!-- Voice Recording Indicator -->
+                    <div id="voice-recording-indicator" class="voice-recording-indicator hidden">
+                        <div class="recording-content">
+                            <div class="recording-icon">🎤</div>
+                            <div class="recording-text">Запись голосового сообщения...</div>
+                            <div class="recording-timer">00:00</div>
+                        </div>
+                    </div>
+
+                    <!-- Document Upload Indicator -->
+                    <div id="document-upload-indicator" class="document-upload-indicator hidden">
+                        <div class="upload-content">
+                            <div class="upload-icon">📄</div>
+                            <div class="upload-text">Обработка документа...</div>
+                            <div class="upload-progress">
+                                <div class="progress-bar"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Input Area -->
@@ -191,6 +211,24 @@
                                 rows="1"
                                 maxlength="4000"
                             ></textarea>
+                            <input type="file" id="document-input" accept=".pdf,.docx,.doc,.txt,.csv,.rtf,.jpg,.jpeg,.png,.gif,.bmp,.tiff" style="display: none;">
+                            <button id="document-btn" class="btn btn-outline" title="Загрузить документ или изображение">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                                    <polyline points="14,2 14,8 20,8"></polyline>
+                                    <line x1="16" y1="13" x2="8" y2="13"></line>
+                                    <line x1="16" y1="17" x2="8" y2="17"></line>
+                                    <polyline points="10,9 9,9 8,9"></polyline>
+                                </svg>
+                            </button>
+                            <button id="voice-btn" class="btn btn-outline" title="Голосовое сообщение">
+                                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path>
+                                    <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
+                                    <line x1="12" y1="19" x2="12" y2="23"></line>
+                                    <line x1="8" y1="23" x2="16" y2="23"></line>
+                                </svg>
+                            </button>
                             <button id="send-btn" class="btn btn-primary" disabled>
                                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                     <line x1="22" y1="2" x2="11" y2="13"></line>
