--- a/static/editor.html
+++ b/static/editor.html
@@ -45,7 +45,7 @@
         .editor-main {
             flex: 1;
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 300px 1fr 1fr;
             gap: 1rem;
             padding: 1rem;
             max-height: calc(100vh - 80px);
@@ -315,11 +315,114 @@
             margin-top: 1rem;
         }
 
+        /* История проектов */
+        .history-panel {
+            min-width: 250px;
+            max-width: 350px;
+        }
+
+        .conversations-list {
+            max-height: calc(100vh - 200px);
+            overflow-y: auto;
+        }
+
+        .conversation-item {
+            padding: 1rem;
+            border-bottom: 1px solid rgba(34, 197, 94, 0.1);
+            cursor: pointer;
+            transition: all 0.2s ease;
+            position: relative;
+        }
+
+        .conversation-item:hover {
+            background: rgba(34, 197, 94, 0.05);
+        }
+
+        .conversation-item.active {
+            background: rgba(34, 197, 94, 0.1);
+            border-left: 3px solid #22c55e;
+        }
+
+        .conversation-title {
+            font-weight: 600;
+            color: #16a34a;
+            margin-bottom: 0.5rem;
+            font-size: 0.9rem;
+        }
+
+        .conversation-preview {
+            color: #6b7280;
+            font-size: 0.8rem;
+            line-height: 1.4;
+            margin-bottom: 0.5rem;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+
+        .conversation-meta {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 0.75rem;
+            color: #9ca3af;
+        }
+
+        .conversation-date {
+            font-size: 0.7rem;
+        }
+
+        .conversation-count {
+            background: rgba(34, 197, 94, 0.1);
+            color: #16a34a;
+            padding: 2px 6px;
+            border-radius: 10px;
+            font-size: 0.7rem;
+        }
+
+        .conversation-actions {
+            position: absolute;
+            top: 0.5rem;
+            right: 0.5rem;
+            opacity: 0;
+            transition: opacity 0.2s ease;
+        }
+
+        .conversation-item:hover .conversation-actions {
+            opacity: 1;
+        }
+
+        .conversation-delete {
+            background: none;
+            border: none;
+            color: #ef4444;
+            cursor: pointer;
+            padding: 4px;
+            border-radius: 4px;
+            font-size: 0.8rem;
+        }
+
+        .conversation-delete:hover {
+            background: rgba(239, 68, 68, 0.1);
+        }
+
         /* Адаптивность */
+        @media (max-width: 1200px) {
+            .editor-main {
+                grid-template-columns: 250px 1fr 1fr;
+            }
+        }
+
         @media (max-width: 1024px) {
             .editor-main {
                 grid-template-columns: 1fr;
-                grid-template-rows: auto 1fr;
+                grid-template-rows: auto auto 1fr;
+            }
+            
+            .history-panel {
+                min-width: unset;
+                max-width: unset;
             }
             
             .prompt-textarea {
@@ -640,6 +743,21 @@
 
         <!-- Основная область -->
         <main class="editor-main">
+            <!-- Боковая панель с историей -->
+            <aside class="editor-panel history-panel">
+                <div class="panel-header">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h3 class="panel-title">📁 История проектов</h3>
+                        <button id="new-project-btn" class="btn btn-outline btn-sm">+ Новый</button>
+                    </div>
+                </div>
+                <div class="panel-content p-0">
+                    <div id="conversations-list" class="conversations-list">
+                        <!-- Conversations will be loaded here -->
+                    </div>
+                </div>
+            </aside>
+
             <!-- Панель чата -->
             <div class="editor-panel chat-panel">
                 <div class="panel-header">
