feat: Renamed AI Editor to 'Создание сайтов' throughout the application
- Updated page title from 'AI-Редактор сайтов' to 'Создание сайтов'
- Changed main panel title from 'AI-Чат для создания сайтов' to 'Создание сайтов'
- Updated welcome message to remove 'AI-' prefix
- Updated README.md description
- Updated AI_EDITOR_HISTORY_GUIDE.md title and content
- Updated routes/ai_editor.py comments and logs
- Updated static/editor.js console log
- Maintained all functionality while improving user-facing terminology
- More user-friendly and accessible naming convention

--- a/static/editor.html
+++ b/static/editor.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Редактор сайтов | WindexsAI</title>
+    <title>Создание сайтов | WindexsAI</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/style.css">
     <style>
-        /* Специфичные стили для AI-редактора */
+        /* Специфичные стили для создания сайтов */
         .editor-container {
             min-height: 100vh;
             background: linear-gradient(135deg, #f5fdf5 0%, #e8f5e8 100%);
@@ -761,7 +761,7 @@
             <!-- Панель чата -->
             <div class="editor-panel chat-panel">
                 <div class="panel-header">
-                    <h2 class="panel-title">💬 AI-Чат для создания сайтов</h2>
+                    <h2 class="panel-title">💬 Создание сайтов</h2>
                 </div>
                 <div class="panel-content chat-content">
                     <!-- Область сообщений -->
@@ -770,7 +770,7 @@
                             <div class="chat-avatar">🤖</div>
                             <div class="chat-bubble ai-bubble">
                                 <div class="chat-text">
-                                    Привет! Я AI-помощник для создания веб-сайтов. Просто опишите, какой сайт вы хотите создать, и я сгенерирую его для вас!
+                                    Привет! Я помощник для создания веб-сайтов. Просто опишите, какой сайт вы хотите создать, и я сгенерирую его для вас!
                                     
                                     <br><br><strong>Примеры запросов:</strong>
                                     <br>• Создай лендинг для фитнес-приложения в зеленых тонах
