--- a/static/editor.html
+++ b/static/editor.html
@@ -961,13 +961,14 @@
                             <div class="chat-avatar">🤖</div>
                             <div class="chat-bubble ai-bubble">
                                 <div class="chat-text">
-                                    Привет! Я помощник для создания веб-сайтов. Просто опишите, какой сайт вы хотите создать, и я сгенерирую его для вас!
+                                    Привет! Я помощник для создания современных веб-приложений на Next.js. Просто опишите, какой проект вы хотите создать, и я сгенерирую полноценное приложение с TypeScript и Tailwind CSS!
                                     
                                     <br><br><strong>Примеры запросов:</strong>
-                                    <br>• Создай лендинг для фитнес-приложения в зеленых тонах
-                                    <br>• Измени цвет кнопок на синий
-                                    <br>• Добавь секцию с отзывами клиентов
-                                    <br>• Сделай дизайн более современным
+                                    <br>• Создай лендинг для фитнес-приложения с современным дизайном
+                                    <br>• Сделай интернет-магазин с каталогом товаров
+                                    <br>• Создай корпоративный сайт для IT-компании
+                                    <br>• Сгенерируй блог с адаптивным дизайном
+                                    <br>• Создай dashboard для управления проектами
                                     
                                     <br><br><strong>🖼️ Изображения из интернета:</strong>
                                     <br>• "Добавь красивое изображение гор в hero-секцию"
