feat: Move project history to header with dedicated projects page
🚀 MAJOR UX IMPROVEMENT: Redesigned project management experience

✨ NEW FEATURES:
- Moved project history from sidebar to header navigation
- Created dedicated projects management page (projects.html)
- Added 'Мои проекты' button in header for better accessibility
- Implemented full project management interface

📁 PROJECT MANAGEMENT PAGE:
- Beautiful grid layout for project cards
- Project preview with truncated descriptions
- Quick actions: Open, Download, Delete
- Project statistics (message count, date)
- Empty state for new users
- Confirmation modal for project deletion

🎨 UI/UX IMPROVEMENTS:
- Two-column layout instead of three (chat + preview)
- More space for main content without sidebar
- Clean header navigation with projects button
- Responsive design for mobile devices
- Modern card-based project interface
- Hover effects and smooth transitions

🛠️ TECHNICAL ENHANCEMENTS:
- URL parameter support for direct project opening
- Automatic project loading from URL (?project=id)
- Enhanced navigation between editor and projects
- Project file parsing and download functionality
- RESTful API integration for project management
- Better error handling and user feedback

📱 NAVIGATION FLOW:
1. Header button → Projects page
2. Project card → Editor with loaded project
3. Back button → Return to editor
4. URL sharing support for specific projects

⚡ PERFORMANCE:
- Removed unnecessary sidebar rendering
- Cleaner DOM structure
- Optimized grid layouts
- Faster page navigation

This update significantly improves the user experience by
providing a dedicated space for project management while
keeping the main editor focused on creation.

--- a/static/editor.html
+++ b/static/editor.html
@@ -42,10 +42,25 @@
             color: #16a34a;
         }
 
+        .header-actions {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        .header-actions .btn {
+            transition: all 0.2s ease;
+        }
+
+        .header-actions .btn:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 4px 12px rgba(34, 197, 94, 0.2);
+        }
+
         .editor-main {
             flex: 1;
             display: grid;
-            grid-template-columns: 300px 1fr 1fr;
+            grid-template-columns: 1fr 1fr; /* Две колонки вместо трех */
             gap: 1rem;
             padding: 1rem;
             max-height: calc(100vh - 80px);
@@ -410,23 +425,20 @@
         /* Адаптивность */
         @media (max-width: 1200px) {
             .editor-main {
-                grid-template-columns: 250px 1fr 1fr;
+                grid-template-columns: 1fr 1fr;
             }
         }
 
         @media (max-width: 1024px) {
             .editor-main {
                 grid-template-columns: 1fr;
-                grid-template-rows: auto auto 1fr;
+                grid-template-rows: auto 1fr;
             }
             
-            .history-panel {
-                min-width: unset;
-                max-width: unset;
-            }
-            
-            .prompt-textarea {
-                min-height: 120px;
+            .header-actions {
+                flex-direction: column;
+                gap: 0.5rem;
+                align-items: stretch;
             }
         }
 
@@ -925,7 +937,10 @@
                     <img src="/static/round_logo-07.svg" alt="WindexsAI" width="24" height="24">
                     WindexsAI
                 </a>
-                <div>
+                <div class="header-actions">
+                    <button id="projects-btn" class="btn btn-outline btn-sm">
+                        📁 Мои проекты
+                    </button>
                     <span id="user-name" class="text-muted"></span>
                     <button id="logout-btn" class="btn btn-outline btn-sm ml-2">Выйти</button>
                 </div>
@@ -934,21 +949,6 @@
 
         <!-- Основная область -->
         <main class="editor-main">
-            <!-- Боковая панель с историей -->
-            <aside class="editor-panel history-panel">
-                <div class="panel-header">
-                    <div class="d-flex align-items-center justify-content-between">
-                        <h3 class="panel-title">📁 История проектов</h3>
-                        <button id="new-project-btn" class="btn btn-outline btn-sm">+ Новый</button>
-                    </div>
-                </div>
-                <div class="panel-content p-0">
-                    <div id="conversations-list" class="conversations-list">
-                        <!-- Conversations will be loaded here -->
-                    </div>
-                </div>
-            </aside>
-
             <!-- Панель чата -->
             <div class="editor-panel chat-panel">
                 <div class="panel-header">
