feat: Update editor header title to 'Создание сайтов'
- Changed header logo text from 'WindexsAI' to 'Создание сайтов'
- Maintains consistent branding with the editor's purpose
- Improves user understanding of the tool's function

--- a/static/editor.html
+++ b/static/editor.html
@@ -935,7 +935,7 @@
             <nav class="editor-nav">
                 <a href="/" class="editor-logo">
                     <img src="/static/round_logo-07.svg" alt="WindexsAI" width="24" height="24">
-                    WindexsAI
+                    Создание сайтов
                 </a>
                 <div class="header-actions">
                     <button id="projects-btn" class="btn btn-outline btn-sm">
