feat: Add personal dashboard with site analytics
- Personal dashboard page with comprehensive site analytics
- Real-time tracking of deployed sites with metrics
- Beautiful charts and visualizations using Chart.js
- Database model for SiteAnalytics with performance metrics
- API endpoints for dashboard data and analytics
- Navigation integration with editor and projects pages
- Responsive design for all devices

--- a/static/editor.html
+++ b/static/editor.html
@@ -941,6 +941,9 @@
                     <button id="projects-btn" class="btn btn-outline btn-sm">
                         📁 Мои проекты
                     </button>
+                    <button id="dashboard-btn" class="btn btn-outline btn-sm">
+                        📊 Личный кабинет
+                    </button>
                     <span id="user-name" class="text-muted"></span>
                     <button id="logout-btn" class="btn btn-outline btn-sm ml-2">Выйти</button>
                 </div>
