Fix Next.js import paths and update AI editor functionality

--- a/static/editor.html
+++ b/static/editor.html
@@ -934,7 +934,7 @@
         <header class="unified-header">
             <div class="header-container">
                 <a href="/" class="header-logo">
-                    <div class="logo-icon">W</div>
+                    <img src="/static/round_logo-07.svg" alt="WindexsAI" width="32" height="32">
                     <span class="logo-text">WindexsAI</span>
                 </a>
 
@@ -959,7 +959,7 @@
             <!-- Панель чата -->
             <div class="editor-panel chat-panel">
                 <div class="panel-header">
-                    <h2 class="panel-title">💬 Создание сайтов</h2>
+                    <h2 class="panel-title"></h2>
                 </div>
                 <div class="panel-content chat-content">
                     <!-- Область сообщений -->
@@ -1037,16 +1037,16 @@
             <div class="editor-panel preview-panel">
                 <div class="panel-header">
                     <div class="d-flex align-items-center justify-content-between">
-                        <h2 class="panel-title">🌐 Предварительный просмотр</h2>
+                        <h2 class="panel-title"></h2>
                         <div class="d-flex gap-2">
                             <button id="edit-mode-btn" class="btn btn-outline btn-sm" title="Режим редактирования">
-                                ✏️ Редактировать
+                                Редактировать
                             </button>
                             <button id="copy-html-btn" class="btn btn-outline btn-sm" title="Копировать HTML">
-                                📋 Копировать
+                                Копировать
                             </button>
                             <button id="download-html-btn" class="btn btn-outline btn-sm" title="Скачать HTML">
-                                💾 Скачать
+                                Скачать
                             </button>
                             <button id="deploy-btn" class="btn btn-primary btn-sm" title="Деплой сайта">
                                 Деплой
@@ -1090,8 +1090,8 @@
                 <div class="deploy-status" id="deploy-status" style="display: none;">
                     <div class="status-message"></div>
                     <div class="deploy-actions" id="deploy-actions" style="display: none;">
-                        <button id="view-site-btn" class="btn btn-primary">🌐 Открыть сайт</button>
-                        <button id="copy-url-btn" class="btn btn-outline">📋 Копировать URL</button>
+                        <button id="view-site-btn" class="btn btn-primary">Открыть сайт</button>
+                        <button id="copy-url-btn" class="btn btn-outline">Копировать URL</button>
                     </div>
                 </div>
             </div>
