--- a/static/index.html
+++ b/static/index.html
@@ -71,7 +71,7 @@
         <header class="unified-header">
             <div class="header-container">
                 <a href="/" class="header-logo">
-                    <div class="logo-icon">W</div>
+                    <img src="/static/round_logo-07.svg" alt="WindexsAI" width="32" height="32">
                     <span class="logo-text">WindexsAI</span>
                 </a>
 
@@ -110,8 +110,8 @@
 
             <!-- Chat Area -->
             <section class="chat-area d-flex flex-column">
-                <!-- Selected Model Info -->
-                <div id="selected-model" class="selected-model hidden">
+                <!-- Selected Model Info - Hidden -->
+                <div id="selected-model" class="selected-model hidden" style="display: none !important;">
                     <div class="model-info">
                         <div class="model-icon" id="model-icon">L</div>
                         <div class="model-details">
