--- a/static/projects.html
+++ b/static/projects.html
@@ -273,7 +273,7 @@
         <header class="unified-header">
             <div class="header-container">
                 <a href="/" class="header-logo">
-                    <div class="logo-icon">W</div>
+                    <img src="/static/round_logo-07.svg" alt="WindexsAI" width="32" height="32">
                     <span class="logo-text">WindexsAI</span>
                 </a>
 
